samples/_failures_safe/1761651460_14ebb7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_511f2823.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_511f2823.c:155:9: error: expected ‘;’ at end of input
  155 |     free
      |         ^
      |         ;
./samples/SAFE/__tmp_511f2823.c:155:5: error: expected declaration or statement at end of input
  155 |     free
      |     ^~~~
